--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8"/>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Template</title>
+    <title>Arraya</title>
   </head>
   <body>
-  	<h1>Template</h1>
+  	<h1>Arrays</h1>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
